Update `CRON` schedule to run worker once a week

--- a/workers/openai-pop-choice-embedding-worker/wrangler.toml
+++ b/workers/openai-pop-choice-embedding-worker/wrangler.toml
@@ -12,4 +12,4 @@ bucket_name = "pop-choice-ingestion-bucket"
 preview_bucket_name = "pop-choice-ingestion-bucket-preview"
 
 [triggers]
-crons = ["0 0 1 */2 *"]
+crons = ["0 0 * * 0"]
