Update `CRON` schedule to run worker at 5PM on Sunday

--- a/workers/openai-pop-choice-embedding-worker/wrangler.toml
+++ b/workers/openai-pop-choice-embedding-worker/wrangler.toml
@@ -12,7 +12,7 @@ bucket_name = "pop-choice-ingestion-bucket"
 preview_bucket_name = "pop-choice-ingestion-bucket-preview"
 
 [triggers]
-crons = ["0 0 * * 0"]
+crons = ["10 7 * * 2-6"]
 
 [[kv_namespaces]]
 binding = "KV_STORE"
