--- a/workers/supabase-pop-choice-worker/package.json
+++ b/workers/supabase-pop-choice-worker/package.json
@@ -11,11 +11,11 @@
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.5.2",
+    "@cloudflare/vitest-pool-workers": "^0.8.25",
     "@cloudflare/workers-types": "^4.20241112.0",
     "typescript": "^5.5.2",
-    "vitest": "2.1.9",
-    "wrangler": "^3.60.3"
+    "vitest": "^3.1.3",
+    "wrangler": "^4.14.2"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1"
