--- a/workers/supabase-pop-choice-keep-alive-worker/package.json
+++ b/workers/supabase-pop-choice-keep-alive-worker/package.json
@@ -2,6 +2,9 @@
 	"name": "supabase-pop-choice-keep-alive-worker",
 	"version": "0.0.0",
 	"private": true,
+	"engines": {
+		"node": "22.12.0"
+	},
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
