--- a/workers/supabase-pop-choice-worker/package.json
+++ b/workers/supabase-pop-choice-worker/package.json
@@ -3,6 +3,9 @@
   "main": "src/index.ts",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.12.0"
+  },
   "scripts": {
     "deploy": "wrangler deploy ",
     "dev": "wrangler dev",
